point in polygon

--- a/point-in-polygon-2.ipynb
+++ b/point-in-polygon-2.ipynb
@@ -4,9 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/gisalgs/notebooks/point-in-polygon-2.ipynb\">\n",
+    "<a href=\"https://colab.research.google.com/github/gisalgs/notebooks/blob/main/point-in-polygon-2.ipynb\">\n",
     "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
     "</a>\n",
+    "\n",
     "\n",
     "# Point-in-Polygon: Even-odd Algorithm\n",
     "\n",
@@ -160,7 +161,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -464,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -488,10 +491,11 @@
     "report01 = lambda res: 1 if res is True else 0\n",
     "results = [report01(pip_cross(p, triangle)[0]) for p in points]\n",
     "\n",
-    "# TODO: use the centroid function to calculate the area of the triangle\n",
+    "# TODO: print out the area of the triangle\n",
+    "#       using the centroid function to calculate\n",
     "from geom.centroid import *\n",
     "\n",
-    "print(centroid(triangle)[0])\n"
+    "print(centroid(triangle)[0])"
    ]
   },
   {
@@ -526,7 +530,14 @@
     "l3 = plt.scatter([p.x for p in points], [p.y for p in points], color=colors, s=15)\n",
     "\n",
     "ax.axis('equal')\n",
-    "plt.show()\n"
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we repeat the this procedure 500 times. Each time will give us a measure of the points falling in the same triangle. This is called Monte-Carlo simulation -- we do the same thing randomly, a lot, and hope at the end we can learn something about that is more likely to happen. "
    ]
   },
   {
@@ -535,7 +546,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inout = lambda x: 1 if x is True else 0\n",
     "def count_in_triangle(points, triangle):\n",
     "    results = [report01(pip_cross(p, triangle)[0]) for p in points]\n",
     "    return sum(results)\n",
@@ -543,7 +553,7 @@
     "counts = []\n",
     "for i in range(500):\n",
     "    points = [Point(random.random()*10, random.random()*10) for i in range(100)]\n",
-    "    counts.append(count_in_triangle(points, triangle))\n"
+    "    counts.append(count_in_triangle(points, triangle))"
    ]
   },
   {
