--- a/centroid-area-2.ipynb
+++ b/centroid-area-2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/gisalgs/notebooks/blob/main/centroid-area-2.ipynb\">\n",
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/gisalgs/notebooks/blob/main/centroid-area-2.ipynb\">\n",
     "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
     "</a>\n",
     "\n",
