centroid and area

--- a/centroid-area-2.ipynb
+++ b/centroid-area-2.ipynb
@@ -640,7 +640,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So the above code yields exactly the same results we had before. This is the commonly used algorithm and we have the code in our github repository at [here](https://github.com/gisalgs/geom/blob/master/centroid.py). It can be downloaded and installed as we did for the other geometry files.\n",
+    "So the above code yields exactly the same results we had before. We can summarize what we did in a more formal way. We suppose there is a polygon of $n$ points and we represent the polygon as a sequence of $n+1$ points: $(x_1, y_1), (x_2, y_2),...,(x_n,y_n),(x_{n+1},y_{n+1})$, where we add an additional point in the sequence $(x_{n+1}, y_{n+1}) = (x_1,y_1)$ to ensure that the polygon is closed. The area of the polygon can be calculated as\n",
+    "\n",
+    "$A = \\frac{1}{2} \\mid\\sum_{i=1}^n (x_i y_{i+1} - x_{i+1} y_i) \\mid .$\n",
+    "\n",
+    "The centroid of the polygon is determined as\n",
+    "\n",
+    "$x = \\frac{1}{6A} \\sum_{i=1}^n (x_i + x_{i+1}) (x_i y_{i+1} - x_{i+1}y_i)$\n",
+    "\n",
+    "$y = \\frac{1}{6A} \\sum_{i=1}^n (y_i + y_{i+1}) (x_i y_{i+1} - x_{i+1}y_i)$\n",
+    "\n",
+    "where $A$ is the area of the polygon as calculated using the above formulas. \n",
+    "\n",
+    "Of course the above equations are based on the triangles are created: the all share a same point at the origin. There are other ways to get the area of a polygon and one more well known method is to use a sequence of trapezoids, which will lead to the following equation for computing the area:\n",
+    "\n",
+    "$A = \\frac{1}{2} \\mid\\sum_{i=1}^n (x_i - x_{i+1}) (y_i + y_{i+1}) \\mid $\n",
+    "\n",
+    "These area commonly used algorithms and we have the code in our github repository at [here](https://github.com/gisalgs/geom/blob/master/centroid.py). It can be downloaded and installed as we did for the other geometry files.\n",
     "\n",
     "To use the centroid module, we can import it like this:"
    ]
