Spatial big data

--- a/spatial-big-data.ipynb
+++ b/spatial-big-data.ipynb
@@ -461,18 +461,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokens = {\"consumer_key\": 'ZYD8f3hGFY3tdclRWEXoUhxpM',\n",
-    "    \"consumer_secret\": 'V4cjXWVstatZMaoMf8hiE10JCCykNRU82PRTLnN34IU9rXPupT',\n",
-    "    \"access_token\": '20824990-5LQAVwk666yeGol0i0ou2vEs2sqSbusPTZOpdk5KD',\n",
-    "    \"access_token_secret\": 'x6K30ramXKr4Awu7e8S0nosy5K2R0ZsWix6mU6LOkFTGf'\n",
-    "}"
+    "tokens = {} # Please see carmen page for the keys"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Though a free license, Twitter allows some limited data streaming and Twitter functions. We will stream some geo-tagged twittes from the world. Geo-tagged tweets come in different shapes. Some tweets have specific geolocation provided as coordinates. Some don't, but the provide some information about the place where the tweets are sent. Nevertheless, we will stream tweets by providing a bounding box so that all the tweets sampled here must fall into this region. Our region in this specific case is the globe (note the commented numbers are for Central Ohio):"
+    "Through a free license, Twitter allows some limited data streaming and Twitter functions. We will stream some geo-tagged tweets from the world. Geo-tagged tweets come in different shapes. Some tweets have specific geolocation provided as coordinates. Some don't, but the provide some information about the place where the tweets are sent. Nevertheless, we will stream tweets by providing a bounding box so that all the tweets sampled here must fall into this region. Our region in this specific case is the globe (note the commented numbers are for Central Ohio):"
    ]
   },
   {
