spatial big data updated

--- a/spatial-big-data.ipynb
+++ b/spatial-big-data.ipynb
@@ -644,7 +644,7 @@
    },
    "outputs": [],
    "source": [
-    "tt = [t for t in tweets if t['coordinates']!=None]\n",
+    "tt = [t for t in tweets if 'coordinates' in t.keys() and t['coordinates']!=None]\n",
     "len(tt)"
    ]
   },
@@ -661,7 +661,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tt = [t for t in tweets if t['coordinates']==None]\n",
+    "tt = [t for t in tweets if 'coordinates' in t.keys() and t['coordinates']==None]\n",
     "tt[0]"
    ]
   },
