--- a/spatial-big-data.ipynb
+++ b/spatial-big-data.ipynb
@@ -186,7 +186,7 @@
     "plot_world(ax, raw_points, numgraticule, numline, 'lightgrey')\n",
     "\n",
     "\n",
-    "quakes_45 = [q for q in quakes_features if q['properties']['mag'] > 4.5 ]\n",
+    "quakes_45 = [q for q in quakes_features if q['properties']['mag'] != None and q['properties']['mag'] > 4.5 ]\n",
     "points = [ [q['geometry']['coordinates'][0], q['geometry']['coordinates'][1]] for q in quakes_45 ]\n",
     "ax.scatter([p[0] for p in points], [p[1] for p in points], color='red', marker='o', alpha=0.8, zorder=2)\n",
     "\n",
