--- a/computational_issues-colab.ipynb
+++ b/computational_issues-colab.ipynb
@@ -150,7 +150,7 @@
    "source": [
     "The above quick test clearly shows the efficiency of using the indexing method for query. It also shows that building the tree may need some significant amount of time. \n",
     "\n",
-    "Now we give it a more systematical test. More specifically, we use different numbers of points, ranging from 100,000 to **1,000,000**, with a step of 100,000. All the experiments were done on an Intel Next Computing Unit 10  with Intel Core i7-10710U CPU 1.10GHz and 16 GB RAM, running the iPython notebook (which can be slower than a regular Python interpreter) on Ubuntu Linux 20.04 LTS. The performance will be different if it is done using another hardware or software environment (such as Colab)."
+    "Now we give it a more systematical test. More specifically, we use different numbers of points, ranging from 100,000 to **1,000,000**, with a step of 100,000. All the experiments were done on Now we give it a more systematical test. More specifically, we use different numbers of points, ranging from 100,000 to **1,000,000**, with a step of 100,000. All the experiments were done on an Intel Next Computing Unit (NUC) 10  with Intel Core i7-10710U CPU 1.10GHz and 16 GB RAM, running the iPython notebook (which can be slower than a regular Python interpreter) on Ubuntu Linux 20.04 LTS. The performance will be different if it is done using another hardware or software environment (such as Colab). "
    ]
   },
   {
@@ -173,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following code shows that the test takes a total of 11.2 minutes. The total time used on trees is 7.7 minutes, and almost all of that time are used to construct the tree (so using the tree doesn't take much time)."
+    "The following code reports some numbers, including the total time in minutes and the time used on tree, where almost all of that time are used to construct the tree (so using the tree doesn't take much time)."
    ]
   },
   {
@@ -421,9 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "results = []\n",
@@ -431,15 +429,8 @@
     "    for w in [25, 50, 100, 200, 400, 600, 800]:\n",
     "        x = test_rect_find(w, w, npts=npts)\n",
     "        x = npts, w, x[0], x[1]\n",
-    "        results.append(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        results.append(x)\n",
+    "\n",
     "for r in results:\n",
     "    print(r)"
    ]
@@ -448,7 +439,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Please note there is a reason the above code is used to printout the tedious results. One of the questions for this module asks for a program that can be used to compute the total time of the above experiment based on the above output. This will be the total time used on the computer to produce this tutorial and it will be an interesting point to see how each of our own computer fares with this 2018 Surface Pro.\n"
+    "Please note there is a reason the above code is used to printout the tedious results. One of the questions for this module asks for a program that can be used to compute the total time of the above experiment based on the above output. This will be the total time used on the computer to produce this tutorial and it will be an interesting point to see how each of our own computer fares with this NUC 10.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color=\"red\">Question 1</font>\n",
+    "\n",
+    "The above code does not report the total time. We can probably go back and re-run the code to get the total time, but we will have to wait another round. Luckily, we did print out the time returned by the `test_rect_find` function, which tell us the average time for each query. The printout is formatted in a specific way and we can definitely utilize that to get the total time. \n",
+    "\n",
+    "The goal here is to compute the total time used in the above experiment. You should not redo the experiment. Instead, use the results printed. For example, the first two lines of the results may look like this:\n",
+    "\n",
+    "```\n",
+    "(100000, 25, 0.00013082027435302735, 0.015203642845153808)\n",
+    "(100000, 50, 0.0003963470458984375, 0.015846920013427735)\n",
+    "```\n",
+    "\n",
+    "and we can simply add a comma at the end of every line (except the last) and then put it in a pair of brackets. We then assign it to a variable:\n",
+    "\n",
+    "```\n",
+    "myresults = [ \n",
+    "(100000, 25, 0.00013082027435302735, 0.015203642845153808),\n",
+    "(100000, 50, 0.0003963470458984375, 0.015846920013427735)\n",
+    "```\n",
+    "\n",
+    "This will create a valid Python data structure that allows us to do necessary calculation. Please also note that the time reported here is the average time per query, so it is important to account for the number of runs when computing the total time. You will need to examine the original code to see how the average is calculated."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO\n",
+    "#\n",
+    "#    Double click on this cell and write your code to answer the above question\n",
+    "#    In the end, the total time should be printed out.\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -681,6 +712,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## <font color=\"red\">Question 2</font>\n",
+    "\n",
+    "Plot a figure that can show the time complexity trend of nearest neighbor search using a tree  (either a k-D tree or a point quadtree will be fine) from the above experiment. Again, we don't need to re-run the code. Instead, use the results printed above , where the first two lines of the printout look like this:\n",
+    "\n",
+    "\n",
+    "```\n",
+    "(200000, 25, 0.0004232645034790039, 0.0017875194549560546, 0.3703118324279785),\n",
+    "(200000, 50, 0.0008641958236694336, 0.0032688140869140624, 0.37016251087188723)\n",
+    "```\n",
+    "\n",
+    "We did not discuss nearest neighbor search the class in this semester, but the algorithms are similar to those of orthogonal and circular searches. Please refer to Sections 5.1.3 and 6.2 of *GIS Algorithms* for more detailed discussions about nearest neighbor search.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO\n",
+    "#\n",
+    "#    Double click on this cell and write your code to answer the above question\n",
+    "#    In the end, the total time should be printed out.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Generally, finding 800 nearest neighbors of a point on a tree of 900,000 points is a piece of cake! However, before we can be more conclusive, there are more tests to do: what is the downside of using a k-D tree? We know that constructing such a tree takes time, and from the previous experiments, we also know that at some point the use of a k-D tree for searching may be excessive because we will have to traverse the tree back and forth too many times that will be more than just using a linear search. Does this happen to the nearest neighbor search using k-D tree too? Here are some quick tests and these should give us some good ideas about the last point!"
    ]
   },
@@ -705,7 +767,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "print(test_nn_find(n_neighbor=10, npts=250))\n",
