--- a/computational_issues-colab.ipynb
+++ b/computational_issues-colab.ipynb
@@ -476,7 +476,7 @@
    "source": [
     "# TODO\n",
     "#\n",
-    "#    Double click on this cell and write your code to answer the above question\n",
+    "#    Double click on this cell and write your code to answer the above question.\n",
     "#    In the end, the total time should be printed out.\n",
     "\n",
     "\n"
@@ -733,8 +733,7 @@
    "source": [
     "# TODO\n",
     "#\n",
-    "#    Double click on this cell and write your code to answer the above question\n",
-    "#    In the end, the total time should be printed out.\n",
+    "#    Double click on this cell and write your code to answer the above question.\n",
     "\n",
     "\n"
    ]
@@ -755,6 +754,34 @@
     "print(test_nn_find(n_neighbor=10, npts=100000))\n",
     "print(test_nn_find(n_neighbor=25, npts=100000))\n",
     "print(test_nn_find(n_neighbor=10000, npts=100000))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color=\"red\">Question 3</font>\n",
+    "\n",
+    "In the output of the above code we should see something like this in each line:\n",
+    "\n",
+    "```\n",
+    "(11.019792795181274, 29.53496918678284, 0.2186837911605835)\n",
+    "```\n",
+    "\n",
+    "What does each of these three numbers mean? What can we learn from this result? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO\n",
+    "#\n",
+    "#    Double click on this cell and answer the above question here.\n",
+    "\n",
+    "\n"
    ]
   },
   {
