--- a/centroid-area-2.ipynb
+++ b/centroid-area-2.ipynb
@@ -564,9 +564,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: find a from the above plotting \n",
-    "#       replace None with actual point on the polygon\n",
-    "\n"
+    "# TODO: find another pair of points from the above plotting \n",
+    "#       so that, after passing them to function triangle_area0\n",
+    "#       a negative area is returned.\n",
+    "#       Below, replace None with actual points on the polygon\n",
+    "\n",
+    "p1 = None\n",
+    "p2 = None\n",
+    "triangle_area0(p1, p2)\n"
    ]
   },
   {
