--- a/point-in-polygon-3.ipynb
+++ b/point-in-polygon-3.ipynb
@@ -284,6 +284,7 @@
     "#       In every iteration, we will an estimate of the area.\n",
     "#       We put all the estimate in a list called areas\n",
     "\n",
+    "areas = []\n",
     "\n"
    ]
   },
