--- a/projections1-colab.ipynb
+++ b/projections1-colab.ipynb
@@ -8,8 +8,9 @@
     "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
     "</a>\n",
     "\n",
-    "# Map Projections\n",
+    "# Map Projections (Halloween Edition 2021)\n",
     "\n",
+    "<img width=555px src=\"figures/halloween-hall-of-fame.png\"/>\n",
     "\n",
     "The goal of a map projection is to transform points in a spherical coordinate system onto a two dimensional Cartesian coordinate system. In other words, points on earth surface that are measured in longitude ($\\lambda$) and latitude ($\\varphi$) pairs become points on a two dimensional plane measured as horizontal ($x$) and vertical ($y$) coordinates. We can imagine there are functions that takes in the longitude and latitude of a point and returns the X and Y coordinates:\n",
     "\n",
@@ -59,7 +60,8 @@
     "\n",
     "# TODO:\n",
     "#     use the same logic to get the points on the meridians\n",
-    "#     code here:\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -67,15 +69,6 @@
     "\n",
     "\n",
     "numgraticule = linenum"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "raw_points[-2], raw_points[-1]"
    ]
   },
   {
@@ -91,21 +84,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "raw_points[-2], raw_points[-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we check how many lines form the graticule. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "numgraticule"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The above line should return a number of 56, which is also the number of lines on the graticule (since we start from zero). It is also the next line number that will come from the GeoJSON file for coastlines. But does it makes sense that the graticule is formed by 56 lines? In the next box, please write your explanation on why there are 55 lines."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "(TODO: Why 56?)\n"
    ]
   },
   {
@@ -114,7 +109,7 @@
    "source": [
     "### Getting the coastlines\n",
     "\n",
-    "In order to directly load the online GeoJSON file into our program here, we need to import a couple of modules. The first module (urllib) is a powerful too designed to scrap information from online sources. The second is the json module that provides tremendous convenience to handle JSON data in general in Python programs."
+    "In order to directly load the online GeoJSON file into our program here, we need to import a couple of modules. The first module (urllib) is a powerful tool designed to scrap information from online sources. The second is the json module that provides tremendous convenience to handle JSON data in general in Python programs."
    ]
   },
   {
@@ -131,9 +126,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next step is to read the data from the online file. We will use the `with` statement in Python. When we read data from a file, something special happens: the bits in the file will be continuous read from the file into the computer memory. We don't call it streaming, but it is close. During the process, we what to make sure the file keeps open and we can continue to read (or write if applicable) the stuff. The `with` statement does just that: it makes sure we can continue to hold the file for reading and writing, and it will release the resource (i.e., file) when we are done. In Python, a `with` statement uses a colon to specific the code that will handle the file. When we exit the code block (i.e., un-indent) the resource is released, meaning other programs can use it. \n",
+    "The next step is to read the data from the online file. We will use the `with` statement in Python. When we read data from a file (online or not), something special happens: the bits in the file will be continuously read from the file into the computer memory. We don't call it streaming, but it is close. During the process, we want to make sure the file keeps open so we can continue to read (or write if applicable) the stuff. The `with` statement does just that: it makes sure we can continue to hold the file for reading and writing, and it will release the resource (i.e., file) when we are done. In Python, a `with` statement uses a colon to specific the code that will handle the file. When we exit the code block (i.e., un-indent) the resource is released, meaning other programs can use it. \n",
     "\n",
-    "The use of `request.urlopen` returns an object of a class called [HTTPResponse](https://docs.python.org/3.3/library/http.client.html#httpresponse-objects) that gives us a handle to deal with the HTTP response from an online service. HTTP stands for Hypertext Transfer Protocol, a foundation on which the entire Web is built. For our case, it allows us to read data from the source. \n",
+    "The use of `request.urlopen` returns an object of a class called [HTTPResponse](https://docs.python.org/3.3/library/http.client.html#httpresponse-objects) that gives us a handle to deal with the HTTP response from an online service. HTTP stands for Hypertext Transfer Protocol, a foundation on which the entire Web is built. For our case, it allows us to read data from the online source. \n",
     "\n",
     "When we read things from a web page (note the GeoJSON file is treated as a web page as everything on the web because of its URL), we get a string. The easiest and quickest way to convert a string into an actual JSON object or Python dictionary is to use the `loads` method from the `json` module. This directly returns an object that can be immediately used -- it is a dictionary."
    ]
@@ -163,6 +158,13 @@
    "outputs": [],
    "source": [
     "coastline_obj.keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see how many features in the GeoJSON:"
    ]
   },
   {
@@ -514,25 +516,23 @@
     "\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# TODO\n",
-    "#    explain below why the above map is only a half of the width as when `lat0` is the default value?\n",
-    "#    You can use write your explanation below in the docstring:\n",
-    "'''\n",
-    "Answer: \n",
-    "\n",
-    "\n",
-    "\n",
-    "'''"
+    "\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "# TODO\n",
+    "#    explain below why the above map is only a half of the width as when `lat0` is the default value?\n",
+    "#    You can use write your explanation below in the docstring:\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -578,7 +578,6 @@
     "#   Append the projected points and their line ID's to list point\n",
     "#   code here:\n",
     "\n",
-    "\n",
     "\n"
    ]
   },
@@ -586,7 +585,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -598,7 +598,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Problems with central meridian\n",
     "\n",
@@ -747,13 +749,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "areas = []\n",
     "for f in tissots['features']:\n",
     "    polygon = []\n",
     "    for p in f['geometry']['coordinates'][0]:\n",
     "        p1 = transform_sinusoidal(p[0], p[1])\n",
     "        polygon.append(Point(p1[0], p1[1]))\n",
     "    area, _ = centroid(polygon)\n",
-    "    print(area)"
+    "    areas.append(area)\n",
+    "    \n",
+    "# TODO:\n",
+    "#   Draw the histogram of the areas of Tissot's indicatrix\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -775,9 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def transformx(lon, lat):\n",
@@ -797,8 +803,6 @@
     "#   code ehre:\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
     "\n"
    ]
   },
@@ -816,28 +820,31 @@
    "outputs": [],
    "source": [
     "# TODO\n",
-    "#    change the transformx function below so that the meridians converge to both poles\n",
-    "#    code ehre:\n",
+    "#    change (redefine) the transformx function below so that the meridians converge to both poles\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# TODO\n",
     "#   project raw_points using the new transformx function\n",
-    "#   code ehre:\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "    \n",
     "# TODO\n",
-    "#   Draw the world map using newly projected points\n",
-    "#   code here\n",
-    "\n",
-    "\n",
+    "#    Draw the world map using newly projected points\n",
     "\n",
     "\n"
    ]
@@ -846,9 +853,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Is this an equal area projection? \n",
-    "\n",
-    "While we can probably work out the math and do the proof, but our question seems to be easier to answer and does not require too much math. If the sinusoidal projection is equal area, then with the same spacing of the latitudes, ours can't be equal area."
+    "Is this an equal area projection? We will once again use the Tissot's indicatrix to visually answer it."
    ]
   },
   {
@@ -892,9 +897,7 @@
    "source": [
     "# TODO:\n",
     "#   Calculate the areas of the circles projected using the new transformx function\n",
-    "#   Code ehre\n",
-    "\n",
-    "\n",
+    "#   Code here\n",
     "\n",
     "\n",
     "\n"
@@ -903,7 +906,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -917,9 +920,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
