--- a/projections2-colab.ipynb
+++ b/projections2-colab.ipynb
@@ -266,9 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from geom.worldmap import *\n",
@@ -285,7 +283,7 @@
     "\n",
     "# TODO\n",
     "#   Draw a world map on Robinson Projection\n",
-    "#   Code ehre:\n",
+    "#   Code here:\n",
     "\n",
     "\n",
     "\n",
@@ -303,7 +301,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -317,9 +315,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
