--- a/indexing-colab.ipynb
+++ b/indexing-colab.ipynb
@@ -20,18 +20,13 @@
     "> <cite>Lewis Carroll, Alice's Adventures in Wonderland</cite>\n",
     "\n",
     "\n",
-    "\n",
-    "There will be four short videos associated this tutorial. These videos will be referred to in the tutorial. These videos can be viewed through the following links or through the links in the Carmen module.\n",
+    "An **algorithm** is a process that contains a set of well designed steps for calculation. For example, we can design a process to tell that, given any integer, what is the next odd number. The word algorithm is from latin _algorismus_, which is from _al-Khwa-rizmī_, a Persian mathematician, astronomer, and geographer. There are two aspects to evaluate an algorithm: its **correctness** and **time complexity**. We focus on the latter here. Time complexity is also called running time, though the term \"running\" is not accurate because we are not really talking about how the algorithm actually runs but in theory how the computation grows with the problem size. The goal of this tutorial is to explain the fundamental concepts of time complexity. There will be four short videos associated this tutorial. They are listed below and will also be referred to in the tutorial. \n",
     "\n",
     "- [Linear search and its time complexity](https://mediasite.osu.edu/Mediasite/Play/d52ce052ccd1434cbcdead898a4152f11d)\n",
     "- [Building a binary tree](https://mediasite.osu.edu/Mediasite/Play/1d687e1028db46b8a91ba03907469b3d1d)\n",
     "- [Explanation of the code](https://mediasite.osu.edu/Mediasite/Play/e53cebfcb78d4724a95833f1fe0e1fda1d)\n",
     "- [Search and time complexity using a balanced binary tree](https://mediasite.osu.edu/Mediasite/Play/49e879bba34e48d1b8ad04befa4d13271d)\n",
     "\n",
-    "***\n",
-    "\n",
-    "\n",
-    "An **algorithm** is a process that contains a set of well designed steps for calculation. For example, we can design a process to tell that, given any integer, what is the next odd number. The word algorithm is from latin _algorismus_, which is from _al-Khwa-rizmī_, a Persian mathematician, astronomer, and geographer. There are two aspects to evaluate an algorithm: its **correctness** and **time complexity**. We focus on the latter here. Time complexity is also called running time. \n",
     "\n",
     "A commonly used type of algorithms is **search**. For example, if we have a database of cities, we may want to find if a city is in the database so that we can pull information for that city. Search comes in different shapes and here we are going to generalize such tasks as searching for one dimensional information as represented using a series of numbers. These numbers can be considered as the IDs of some entities. In later part of this module we will explore how multiple dimensions in the data (such as points in spatial data) can be utilized for search. \n",
     "\n",
@@ -77,7 +72,7 @@
     "\n",
     "We don't really care much about $b$ and $c$ -- they are constant and are always relatively small. But the value of n tells how running time **grows** with the data. We use a growth function to tell the running time. More specifically, if we know there is a definitive upper bound of the running time, we use a **Big-O** notation to denote the growth. In the case of the linear search algorithm, we have a running time of $O(n)$. The above algorithm is called **linear search** for a reason: the time used is linear to the size of input. \n",
     "\n",
-    "**Video:** There is a video that explains some of the concepts above. The video can be viewed through the Carmen module link or direct link at [here](https://mediasite.osu.edu/Mediasite/Play/d52ce052ccd1434cbcdead898a4152f11d). We only touch the Big-O notation in its simplest form and more details can be found in multiple sources such as at [Khan academy](https://www.khanacademy.org/computing/computer-science/algorithms/asymptotic-notation/a/big-o-notation) and at the [wikipedia page](https://en.wikipedia.org/wiki/Big_O_notation).\n",
+    "**Video:** There is a [video](https://mediasite.osu.edu/Mediasite/Play/d52ce052ccd1434cbcdead898a4152f11d) that explains some of the above concepts. We only touch the Big-O notation in its simplest form and more details can be found in multiple sources such as at [Khan academy](https://www.khanacademy.org/computing/computer-science/algorithms/asymptotic-notation/a/big-o-notation) and at the [wikipedia page](https://en.wikipedia.org/wiki/Big_O_notation).\n",
     "\n",
     "\n",
     "## Quadratic time complexity\n",
@@ -101,8 +96,6 @@
     "\n",
     "## Search using a tree structure\n",
     "\n",
-    "**Video:** Please refer to [the video](https://mediasite.osu.edu/Mediasite/Play/1d687e1028db46b8a91ba03907469b3d1d) for this part.\n",
-    "\n",
     "What we have explored so far is to **search** for something useful from a set of data. More specifically, what we have seen is a way of linear search: we just go from one end of the data to the other end. A linear search can work, but there are better ways to find info from a list. Let's consider what will happen if we re-arrange the data in the original list into a special tree structure as illustrated below:\n",
     "\n",
     "<img src=\"figures/trees-2.png\" width=300/>\n",
@@ -118,12 +111,40 @@
     "<img src=\"figures/trees-1.png\" width=450/>\n",
     "\n",
     "\n",
-    "Which tree is \"better\" then? To answer this question, we need to introduce a few terminologies. The **depth** of a node is the number of edges on the path from the root to that node. The depth of the root is 0. There is at least a leaf node on the tree that has the deepest depth (with the highest number of edges) from the root, and we call this depth the **height** of the tree. The ideas of depth and height can also be looked at from the perspective of each node (we just pretend the node is the root and concentrate on all the child nodes from that node). This is what we call a **subtree**, formed by a node and all its child nodes.\n",
+    "Which tree is \"better\" then? To answer this question, we need to introduce a few terminologies. The **depth** of a node is the number of edges on the path from the root to that node. The depth of the root is 0. There is at least a leaf node on the tree that has the deepest (with the highest number of edges) from the root, and we call this depth the **height** of the tree. The ideas of depth and height can also be looked at from the perspective of each node (we just pretend the node is the root and concentrate on all the child nodes from that node). This is what we call a **subtree**, formed by a node and all its child nodes.\n",
     "\n",
     "Every node on a tree has two subtrees, left and right. This leads to the definition of a **balanced tree**: a tree where the difference in the heights of the left and right subtrees of *any node* is no more than 1. A wordier way to say the same, but using the term depth, is this: a balanced tree is a tree where the difference in the depths of the deepest leaf nodes in the left and right subtrees of *any node* is no more than 1. To this definition (there are different definitions too), the above two tree are not balanced, but the first tree is.\n",
     "\n",
-    "\n",
+    "Given a sequence of numbers, we can build a binary tree from scratch. We use the first number as the root and the next number will be the left child node of the root if it is smaller than the toot, or the right if greater. The process continues until all numbers are included in the tree. [**This video**](https://mediasite.osu.edu/Mediasite/Play/1d687e1028db46b8a91ba03907469b3d1d) explains the process.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color=\"red\">Exercises</font>\n",
+    "\n",
+    "We will first reshuffle 12 integers so they are in a random order. Then we will create a binary tree using this randomly ordered list of numbers, both manually and using our code. Finally we examine the time complexity of using this binary tree. To do all of these, let's make sure we can run the following code cell, which should produce the reshuffled list for us.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "test_nums = list(range(12))\n",
+    "random.shuffle(test_nums)\n",
+    "print(test_nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use the numbers printed out from the above code to manually build a binary tree. Make sure to use the numbers in the printout sequentially with the one on the left being the first. We will do this in class on a paper. Make sure to include both the numbers and the tree on the paper, and submit the answer in as an image to \"Exercises - module 3.1 on paper\".\n"
    ]
   },
   {
@@ -212,47 +233,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Print the actual tree\n",
-    "\n",
-    "Though we can definitely print out the content in a binary tree in the right order, it would be nice if we can actually print out the \"tree\" itself. Doing so is not difficult, though quite tedious. There is a Python program available provided by the MIT OpenCourseWare web site at [here](http://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-006-introduction-to-algorithms-fall-2011/readings/binary-search-trees/bst.py). With some simple modification, we can write a function to print out the tree structure. This function takes an input argument that is simply the root node of a tree.\n",
-    "\n",
-    "```python\n",
-    "def tree_print(t):\n",
-    "    \"\"\"\n",
-    "    Source: http://ocw.mit.edu/\n",
-    "    \"\"\"\n",
-    "    def tree_print_helper(t):\n",
-    "        if t is None:\n",
-    "            return [], 0, 0\n",
-    "        label = str(t)\n",
-    "        leftstr, leftpos, leftwidth = tree_print_helper(t.left)\n",
-    "        rightstr, rightpos, rightwidth = tree_print_helper(t.right)\n",
-    "        middle = max(rightpos+leftwidth - leftpos+1, len(label), 2)\n",
-    "        pos = leftpos + middle // 2\n",
-    "        width = leftpos + middle + rightwidth - rightpos\n",
-    "        while len(leftstr)<len(rightstr):\n",
-    "            leftstr.append(' '*leftwidth)\n",
-    "        while len(rightstr)<len(leftstr):\n",
-    "            rightstr.append(' '*rightwidth)\n",
-    "        if (middle-len(label))%2 == 1:\n",
-    "            label += '_'\n",
-    "        label = label.center(middle, '_')\n",
-    "        if label[0] == '_': label=' ' + label[1:]\n",
-    "        if label[-1] == '_': label = label[:-1]+' '\n",
-    "        lines = [' '*leftpos + label + ' '*(rightwidth-rightpos),\n",
-    "                 ' '*leftpos+'/'+' '*(middle-2)+'\\\\'+' '*(rightwidth-rightpos)]+\\\n",
-    "            [leftline + ' '*(width-leftwidth-rightwidth) +\n",
-    "             rightline for leftline, rightline in zip(leftstr, rightstr)]\n",
-    "        return lines, pos, width\n",
-    "    print('\\n'.join(tree_print_helper(t)[0]))\n",
-    "\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Putting it together\n",
     "\n",
     "We put all the code described above into a file called [bst.py](https://github.com/gisalgs/indexing/blob/master/bst.py) that is available in a github repository called **indexing**. To use the module locally, we can save it in a folder called **indexing** under our root folder (this is at the same level as our previous folder geom). Don't forget to create an empty file called `__init__.py` in the indexing folder. The we can use it like this:\n",
@@ -306,7 +286,65 @@
    "outputs": [],
    "source": [
     "data = range(10)\n",
-    "t = bt(data)\n",
+    "t = bt(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can explicitly navigate the tree by calling the left and right nodes, starting from the root."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t.left"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t.right"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is a function called `bt_print` in the [`bst`](https://github.com/gisalgs/indexing/blob/master/bst.py) module and it can be used to print out the nodes in the tree in a certain order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bt_print(t)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Printing the tree\n",
+    "\n",
+    "Though `bt_print` can give us some information about the tree, it is not intuitive. It would be nice if we can actually print out the \"tree\" itself. Doing so is not difficult, though quite tedious. There is a Python program available from the MIT OpenCourseWare web site at [here](http://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-006-introduction-to-algorithms-fall-2011/readings/binary-search-trees/bst.py). This program is included as a function called `tree_print` in the module called [`bst.py`](https://github.com/gisalgs/indexing/blob/master/bst.py). This function takes an input argument that is simply the root node of a tree."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "tree_print(t)"
    ]
   },
@@ -314,6 +352,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Searching a tree\n",
+    "\n",
     "Now we can search for information from the trees."
    ]
   },
@@ -380,15 +420,46 @@
     "\n",
     "The while loop at the beginning of the algorithm actually controls the total running time. What controls the number of loops then? It is the height of the tree and we can certainly calculate the **height** of the tree given two factors: the number of data items to be stored in the tree, and whether the tree is balanced. If the difference between the heights of all leaf nodes is no more than 1, we say the tree is **balanced**. A perfectly balanced tree with a height of $H$ will be able to hold a total of $2^0 +2^1 +2^2 +...+2^H = 2^{H+1}−1$ items. In other words, if we have $n$ items that need to be indexed using a balanced tree, the height of that tree is of the order of, again using the Big-O notation,  $O(\\log_2n)$, which is also the running time of search using that tree. This is a significantly more efficient way of search with a **logarithmic time complexity**.\n",
     "\n",
-    "With this, we should be able to answer questions like this: what is the minimum height of a balanced binary tree to hold 100 nodes? We need to find the smallest $H$ value so that $2^{H+1}-1$ is greater than 100. This is also a question for this week's Before you go... quiz.\n",
+    "With this, we should be able to answer questions like this: what is the minimum height of a balanced binary tree to hold 100 nodes? We need to find the smallest $H$ value so that $2^{H+1}-1$ is greater than 100. This is also a question for this week's exercises and the Before you go... quiz.\n",
     "\n",
     "More details about the time complexity analysis are in **Section 1.1** in _GIS Algorithms_.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color=\"red\">Exercises</font>\n",
+    "\n",
+    "Use the Python code introduced in this tutorial to create a binary tree based on random numbers from the reshuffled numbers. Then use the `tree_print` function to print the tree. The tree printed out should look exact the same as the manually created one. Use the blank code cell below or add additional code cells to enter your answer. Make sure you run the code.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('The numbers are', test_nums)\n",
+    "\n",
+    "# TODO: write your code here to answer the above question,\n",
+    "#       using the numbers in test_nums\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color=\"red\">Exercises</font>\n",
+    "\n",
+    "Is the above tree balanced? What will be the minimal height of a binary tree for the 12 unique numbers? What will be the number at the root node? There is no need to write code for this one. **Write your answer directly in this cell.**\n",
+    "\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -402,9 +473,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
