--- a/kd-tree-querying-colab.ipynb
+++ b/kd-tree-querying-colab.ipynb
@@ -13,17 +13,11 @@
     "\n",
     "So far we have discussed how to query a k-D tree for a point. We can use k-D trees to conduct more complicated queries. For example, we can use a k-D tree to efficiently find all the points in a certain region such as a circle or rectangle and we call this a **range query**. We can also find a specified number of the nearest points of a given point. We will focus on a particular query called **orthogonal range query**, where the range is specified as a rectangle. There are other kinds of queries, including circular range query and nearest neighbor query. More details can be found in the textbook *GIS Algorithms* and the code are available in the [indexing repository](https://github.com/gisalgs/indexing) at the github site.\n",
     "\n",
-    "There are two videos associated with this tutorial. Please watch them from the carmen module links.\n",
-    "\n",
-    "- **Video: k-D tree orthogonal range query explained**. This video explains the concept of range query and especially orthogonal range query.\n",
-    "- **Video: k-D tree range query coding**. This video walks through the implementation of a brute-force (linear) approach to searching for points in a rectangle, and then compares it with the use of k-D trees.\n",
-    "\n",
-    "\n",
     "## Orthogonal range query: a brute force approach\n",
     "\n",
     "Given a **rectangle**, can we quickly find all the points that fall within the rectangle? A brute-force approach is to test every point. We can also call it exhaustive search since it exhausts all the possible cases. This is straightforward to implement, but it can be extremely slow, especially when we have a lot of points to test and we have to test many times -- think about the number of places in the world. \n",
     "\n",
-    "To show how a brute force approach works, we will complete the code below. Here, we encode the rectangle as a list of lists of four values: `[[xmin, xmax], [ymin, ymax]]`. Please watch the video that explains this part with the complete code and more."
+    "To show how a brute force approach works, we will complete the code below. Here, we encode the rectangle as a list of lists of four values: `[[xmin, xmax], [ymin, ymax]]`. "
    ]
   },
   {
@@ -63,7 +57,7 @@
     "    rect          a rectangle encoded as  [[xmin, xmax], [ymin, ymax]]\n",
     "    '''\n",
     "    # TODO:\n",
-    "    #    Replace the pass statement blow to complete the code for a brute-force search\n",
+    "    #    Replace the pass statement below to complete the code for a brute-force search\n",
     "    #\n",
     "    pass\n",
     "\n",
@@ -222,7 +216,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -236,9 +230,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
