--- a/point-quadtree-colab.ipynb
+++ b/point-quadtree-colab.ipynb
@@ -16,8 +16,6 @@
     "\n",
     "There are different kinds of quadtrees. The one we described in the above figure is called **point quadtree**: we index points using the coordinates of the points. Another type of quadtree for points is called **point region quadtree** where we partition the region as in region quadtrees. We can also use quadtree to index raster data, and data for lines and rectangles. [Hanan Samet](http://www.cs.umd.edu/~hjs/) and his colleagues at the University of Maryland used to maintain a [web site](http://donar.umiacs.umd.edu/quadtree/) that has an excellent collection of demos for quadtrees and k-D tree, but the site is no longer available after many years.\n",
     "\n",
-    "The concepts of the point queadtree will be introduced in class or through an online video. There is also a set of exercises associated \n",
-    "\n",
     "## Programming point quadtrees\n",
     "\n",
     "We develop a specific class to store the node of a point quadtree. This node will have four child nodes, each named using the direction of the quadrant:\n",
@@ -449,7 +447,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -463,9 +461,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
