--- a/centroid-area-3.ipynb
+++ b/centroid-area-3.ipynb
@@ -330,7 +330,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The centroid (gravity center) can still be outside the polygon (see questions below). This can be a problem when we really want it to be inside. [Here](https://www.mapbox.com/blog/polygon-center/)) is a method to get the visual center of a polygon that is bound to be inside the polygon."
+    "The centroid (gravity center) can still be outside the polygon (see questions below). This can be a problem when we really want it to be inside. [Here](https://www.mapbox.com/blog/polygon-center/) is a method to get the visual center of a polygon that is bound to be inside the polygon."
    ]
   },
   {
